@startuml class
' MEDIS — Class Diagram (generated from source in src/)
!pragma layout smetana
skinparam dpi 140
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
title MEDIS — Class Diagram

' ===================== MODEL =====================
package model {

  abstract class User {
    # userId : int
    # username : String
    # passwordHash : String
    # role : String
    + getUserId() : int
    + getUsername() : String
    + getPasswordHash() : String
    + getRole() : String
    + {abstract} dashboardTitle() : String
  }

  class Admin {
    + Admin(id, username, hash)
    + dashboardTitle() : String
  }

  class Receptionist {
    + Receptionist(id, username, hash)
    + dashboardTitle() : String
  }

  class Doctor {
    - doctorId : int
    - name : String
    - specialization : String
    + Doctor(userId, username, hash, doctorId, name, specialization)
    + Doctor(doctorId, name, specialization)
    + getDoctorId() : int
    + getName() : String
    + getSpecialization() : String
    + dashboardTitle() : String
  }

  class Patient {
    - patientId : int
    - name : String
    - age : int
    - gender : String
    - medicalHistory : String
    + getPatientId() : int
    + getName() : String
    + getAge() : int
    + getGender() : String
    + getMedicalHistory() : String
  }

  class Appointment {
    - appointmentId : int
    - dateTime : LocalDateTime
    - status : Status
    + getAppointmentId() : int
    + getPatient() : Patient
    + getDoctor() : Doctor
    + getStatus() : Status
  }

  enum Status {
    SCHEDULED
    COMPLETED
    CANCELLED
  }

  class Result {
    - ok : boolean
    - message : String
    - data : Object
    + {static} ok() : Result
    + {static} ok(data) : Result
    + {static} fail(msg) : Result
    + isOk() : boolean
  }
}

User <|-- Admin
User <|-- Receptionist
User <|-- Doctor
Appointment "*" --> "1" Patient
Appointment "*" --> "1" Doctor
Appointment *-- Status

' ===================== CONTROLLER =====================
package controller {
  class SystemController {
    - currentUser : User
    + login() : LoginController
    + patient() : PatientController
    + doctor() : DoctorController
    + appointment() : AppointmentController
    + report() : ReportController
    + getCurrentUser() : User
    + setCurrentUser(u)
    + logout()
  }
  class LoginController {
    + authenticate(username, password) : Result
  }
  class PatientController {
    + add(name, age, gender, history) : Result
    + update(id, name, age, gender, history) : Result
    + getAll() : List<Patient>
  }
  class DoctorController {
    + add(name, specialization) : Result
    + getAll() : List<Doctor>
  }
  class AppointmentController {
    + book(patientId, doctorId, dt) : Result
    + cancel(appointmentId) : Result
    + getAll() : List<Appointment>
  }
  class ReportController {
    + totalPatients() : int
    + totalAppointments() : int
    + doctorSchedules() : Map<Doctor,List<Appointment>>
  }
}

SystemController *-- LoginController
SystemController *-- PatientController
SystemController *-- DoctorController
SystemController *-- AppointmentController
SystemController *-- ReportController
SystemController --> User : currentUser

' ===================== DAO =====================
package dao {
  interface UserDAO {
    + findByUsername(username) : Optional<User>
    + findAll() : List<User>
  }
  interface PatientDAO {
    + insert(p) : Result
    + findById(id) : Optional<Patient>
    + findAll() : List<Patient>
    + update(p) : Result
  }
  interface DoctorDAO {
    + insert(d) : Result
    + findById(id) : Optional<Doctor>
    + findAll() : List<Doctor>
    + update(d) : Result
  }
  interface AppointmentDAO {
    + insert(a) : Result
    + findAll() : List<Appointment>
    + findByDoctor(doctorId) : List<Appointment>
    + existsByDoctorAndTime(doctorId, dt) : boolean
    + updateStatus(id, status) : Result
  }
  class UserDAOImpl
  class PatientDAOImpl
  class DoctorDAOImpl
  class AppointmentDAOImpl

  UserDAO <|.. UserDAOImpl
  PatientDAO <|.. PatientDAOImpl
  DoctorDAO <|.. DoctorDAOImpl
  AppointmentDAO <|.. AppointmentDAOImpl
}

LoginController --> UserDAO
PatientController --> PatientDAO
DoctorController --> DoctorDAO
AppointmentController --> AppointmentDAO
AppointmentController --> PatientDAO
AppointmentController --> DoctorDAO
ReportController --> PatientDAO
ReportController --> DoctorDAO
ReportController --> AppointmentDAO

' ===================== DB =====================
package db {
  class DatabaseConnection <<singleton>> {
    + {static} getInstance() : DatabaseConnection
    + getConnection() : Connection
  }
}

UserDAOImpl --> DatabaseConnection
PatientDAOImpl --> DatabaseConnection
DoctorDAOImpl --> DatabaseConnection
AppointmentDAOImpl --> DatabaseConnection

@enduml
